<resources>
    <string name="app_name">SushiHub</string>
    <string name="scannerizzami">Scannerizzami</string>
    <string name="qr_code">QR_CODE</string>
    <string name="prosegui">Prosegui</string>
    <string name="totale">Totale:</string>
    <string name="costo_menu">Costo Menu:</string>
    <string name="costo_extra">Costo Extra:</string>
    <string name="benvenuto_in_sushihub">Benvenuto in SushiHub</string>
    <string name="vuoi_creare_un_tavolo_o_unirti_ad_uno_gi_esistente">Vuoi creare un tavolo o unirti ad uno già esistente?</string>
    <string name="unisciti">Unisciti</string>
    <string name="crea">Crea</string>
    <string name="portate_massime_a_persona">Portate massime a persona</string>
    <string name="icona_pi">Icona più</string>
    <string name="codice">Codice</string>
    <string name="quantit">Quantità</string>
    <string name="descrizione">Descrizione</string>
    <string name="salva">Salva</string>
    <string name="salva_e_nuovo">Salva e nuovo</string>
    <string name="salva_e_esci">Salva e esci</string>
    <string name="prezzo">Prezzo</string>
    <string name="easy_sushi_is_easy">Easy sushi is easy</string>
    <string name="better_with_friends">Better with friends</string>
    <string name="mostra_qr">Mostra QR</string>
    <string name="tutti_gli_ordini">Tutti gli ordini</string>
    <string name="checkout">Checkout</string>
    <string name="tavolo">Tavolo</string>
    <string name="storico_ordini">Storico ordini</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="elimina_tavolo">Elimina tavolo</string>
    <string name="extra">Extra</string>
    <string name="ristorante">Ristorante</string>
    <string name="nome_del_ristorante">Nome del ristorante</string>
    <string name="qual_il_tuo_nome">Qual è il tuo nome?</string>
    <string name="sushi_icon">Sushi icon</string>
    <string name="pulisci_storico">Pulisci storico</string>
    <string name="nome">Nome</string>
    <string name="nome_ristorante">Nome ristorante</string>
    <string name="conv_greeting">Ti trovi presso un ristorante convenzionato?</string>
    <string name="ristorante_convenzionato">Ristorante&#10;convenzionato</string>
    <string name="ristorante_non_convenzionato">Ristorante non&#10;convenzionato</string>
</resources>